After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688600 - debug-manager: Fix accessing of invalid tree models.
debug-manager: Fix accessing of invalid tree models.
Status: RESOLVED FIXED
Product: anjuta
Classification: Applications
Component: plugins: debug-manager
unspecified
Other All
: Normal normal
: ---
Assigned To: Sébastien Granjoux
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-18 19:09 UTC by Carl-Anton Ingmarsson
Modified: 2012-11-19 17:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
debug-manager: Fix accessing of invalid tree models. (4.38 KB, patch)
2012-11-18 19:09 UTC, Carl-Anton Ingmarsson
committed Details | Review

Description Carl-Anton Ingmarsson 2012-11-18 19:09:54 UTC
See attached patch.
Comment 1 Carl-Anton Ingmarsson 2012-11-18 19:09:55 UTC
Created attachment 229301 [details] [review]
debug-manager: Fix accessing of invalid tree models.

We previously stored the DebugTree's model in the gTreeList but the model could be changed
with debug_tree_set_model() which would make the model stored in the gTreeList invalid. Fix
this by storing the DebugTree in the gTreeList instead. This fixes these two warnings.

(anjuta:31701): GLib-GObject-WARNING **: invalid uninstantiatable type `<invalid>' in cast to `GtkTreeModel'

(anjuta:31701): Gtk-CRITICAL **: gtk_tree_model_iter_children: assertion `GTK_IS_TREE_MODEL (tree_model)' failed
Comment 2 Sébastien Granjoux 2012-11-19 17:38:03 UTC
Comment on attachment 229301 [details] [review]
debug-manager: Fix accessing of invalid tree models.

Thank you for your patch. I have committed it with just whitespace fixes.