debug-manager: Fix accessing of invalid tree models.

We previously stored the DebugTree's model in the gTreeList but the model could be changed
with debug_tree_set_model() which would make the model stored in the gTreeList invalid. Fix
this by storing the DebugTree in the gTreeList instead. This fixes these two warnings.

(anjuta:31701): GLib-GObject-WARNING **: invalid uninstantiatable type `<invalid>' in cast to `GtkTreeModel'

(anjuta:31701): Gtk-CRITICAL **: gtk_tree_model_iter_children: assertion `GTK_IS_TREE_MODEL (tree_model)' failed

https://bugzilla.gnome.org/show_bug.cgi?id=688600